--- a/Lab3/vowls_nouns.ipynb
+++ b/Lab3/vowls_nouns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1a6f26570f0>"
+       "<matplotlib.image.AxesImage at 0x235cd5941d0>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -79,9 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\iustin.petrisor\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras import optimizers\n",
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -135,155 +145,155 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "1/0 [======================================] - 0s 111ms/step - loss: 0.6691 - accuracy: 0.6400\n",
+      "1/0 [======================================] - 0s 242ms/step - loss: 0.6977 - accuracy: 0.5200\n",
       "Epoch 2/30\n",
-      "1/0 [======================================] - 0s 34ms/step - loss: 0.5576 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 35ms/step - loss: 0.5650 - accuracy: 0.7600\n",
       "Epoch 3/30\n",
-      "1/0 [======================================] - 0s 95ms/step - loss: 0.5553 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 66ms/step - loss: 0.5887 - accuracy: 0.7600\n",
       "Epoch 4/30\n",
-      "1/0 [======================================] - 0s 98ms/step - loss: 0.5551 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 119ms/step - loss: 0.5667 - accuracy: 0.7600\n",
       "Epoch 5/30\n",
-      "1/0 [======================================] - 0s 109ms/step - loss: 0.5441 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 83ms/step - loss: 0.5343 - accuracy: 0.7600\n",
       "Epoch 6/30\n",
-      "1/0 [======================================] - 0s 90ms/step - loss: 0.5502 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 110ms/step - loss: 0.5225 - accuracy: 0.7600\n",
       "Epoch 7/30\n",
-      "1/0 [======================================] - 0s 101ms/step - loss: 0.5409 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 93ms/step - loss: 0.5291 - accuracy: 0.7600\n",
       "Epoch 8/30\n",
-      "1/0 [======================================] - 0s 105ms/step - loss: 0.5669 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 103ms/step - loss: 0.4984 - accuracy: 0.7600\n",
       "Epoch 9/30\n",
-      "1/0 [======================================] - 0s 99ms/step - loss: 0.5160 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 156ms/step - loss: 0.5375 - accuracy: 0.7600\n",
       "Epoch 10/30\n",
-      "1/0 [======================================] - 0s 105ms/step - loss: 0.5258 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 51ms/step - loss: 0.4894 - accuracy: 0.7600\n",
       "Epoch 11/30\n",
-      "1/0 [======================================] - 0s 95ms/step - loss: 0.4886 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 150ms/step - loss: 0.5600 - accuracy: 0.7600\n",
       "Epoch 12/30\n",
-      "1/0 [======================================] - 0s 108ms/step - loss: 0.5617 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 56ms/step - loss: 0.4298 - accuracy: 0.7600\n",
       "Epoch 13/30\n",
-      "1/0 [======================================] - 0s 95ms/step - loss: 0.4716 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 113ms/step - loss: 0.4640 - accuracy: 0.7600\n",
       "Epoch 14/30\n",
-      "1/0 [======================================] - 0s 98ms/step - loss: 0.4732 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 88ms/step - loss: 0.4669 - accuracy: 0.8000\n",
       "Epoch 15/30\n",
-      "1/0 [======================================] - 0s 99ms/step - loss: 0.5368 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 102ms/step - loss: 0.4932 - accuracy: 0.7600\n",
       "Epoch 16/30\n",
-      "1/0 [======================================] - 0s 102ms/step - loss: 0.5202 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 103ms/step - loss: 0.4862 - accuracy: 0.7200\n",
       "Epoch 17/30\n",
-      "1/0 [======================================] - 0s 99ms/step - loss: 0.5832 - accuracy: 0.6800\n",
+      "1/0 [======================================] - 0s 112ms/step - loss: 0.4964 - accuracy: 0.8000\n",
       "Epoch 18/30\n",
-      "1/0 [======================================] - 0s 101ms/step - loss: 0.5207 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 135ms/step - loss: 0.4191 - accuracy: 0.8000\n",
       "Epoch 19/30\n",
-      "1/0 [======================================] - 0s 105ms/step - loss: 0.4440 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 111ms/step - loss: 0.3919 - accuracy: 0.8800\n",
       "Epoch 20/30\n",
-      "1/0 [======================================] - 0s 98ms/step - loss: 0.5253 - accuracy: 0.6800\n",
+      "1/0 [======================================] - 0s 96ms/step - loss: 0.4887 - accuracy: 0.7600\n",
       "Epoch 21/30\n",
-      "1/0 [======================================] - 0s 96ms/step - loss: 0.4576 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 111ms/step - loss: 0.6301 - accuracy: 0.7600\n",
       "Epoch 22/30\n",
-      "1/0 [======================================] - 0s 99ms/step - loss: 0.4066 - accuracy: 0.8400\n",
+      "1/0 [======================================] - 0s 95ms/step - loss: 0.6599 - accuracy: 0.7200\n",
       "Epoch 23/30\n",
-      "1/0 [======================================] - 0s 103ms/step - loss: 0.4932 - accuracy: 0.7200\n",
+      "1/0 [======================================] - 0s 101ms/step - loss: 0.5857 - accuracy: 0.7200\n",
       "Epoch 24/30\n",
-      "1/0 [======================================] - 0s 101ms/step - loss: 0.4875 - accuracy: 0.8400\n",
+      "1/0 [======================================] - 0s 112ms/step - loss: 0.5461 - accuracy: 0.7600\n",
       "Epoch 25/30\n",
-      "1/0 [======================================] - 0s 99ms/step - loss: 0.4416 - accuracy: 0.7200\n",
+      "1/0 [======================================] - 0s 101ms/step - loss: 0.4708 - accuracy: 0.8000\n",
       "Epoch 26/30\n",
-      "1/0 [======================================] - 0s 103ms/step - loss: 0.5468 - accuracy: 0.7200\n",
+      "1/0 [======================================] - 0s 108ms/step - loss: 0.7307 - accuracy: 0.7600\n",
       "Epoch 27/30\n",
-      "1/0 [======================================] - 0s 100ms/step - loss: 0.3695 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 91ms/step - loss: 0.4998 - accuracy: 0.7200\n",
       "Epoch 28/30\n",
-      "1/0 [======================================] - 0s 101ms/step - loss: 0.4395 - accuracy: 0.8800\n",
+      "1/0 [======================================] - 0s 117ms/step - loss: 0.5110 - accuracy: 0.6800\n",
       "Epoch 29/30\n",
-      "1/0 [======================================] - 0s 113ms/step - loss: 0.4641 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 57ms/step - loss: 0.4548 - accuracy: 0.7600\n",
       "Epoch 30/30\n",
-      "1/0 [======================================] - 0s 92ms/step - loss: 0.5660 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 134ms/step - loss: 0.5453 - accuracy: 0.7200\n",
       "Epoch 0\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.3292 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 11ms/step - loss: 1.1301 - accuracy: 0.5000\n",
       "Epoch 1\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.9791 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.3081 - accuracy: 1.0000\n",
       "Epoch 2\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1071 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.5533 - accuracy: 1.0000\n",
       "Epoch 3\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.9328 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.7819 - accuracy: 0.5000\n",
       "Epoch 4\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 1.1018 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.3472 - accuracy: 1.0000\n",
       "Epoch 5\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.4324 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.8488 - accuracy: 0.5000\n",
       "Epoch 6\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.4380 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.2700 - accuracy: 1.0000\n",
       "Epoch 7\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.3383 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.2363 - accuracy: 1.0000\n",
       "Epoch 8\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.6735 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.1776 - accuracy: 1.0000\n",
       "Epoch 9\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.7648 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.8589 - accuracy: 0.5000\n",
       "Epoch 10\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.8788 - accuracy: 0.0000e+00\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.1629 - accuracy: 1.0000\n",
       "Epoch 11\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.6144 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.1424 - accuracy: 1.0000\n",
       "Epoch 12\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.3904 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.0945 - accuracy: 1.0000\n",
       "Epoch 13\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.3424 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0581 - accuracy: 1.0000\n",
       "Epoch 14\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.7037 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 1.4390 - accuracy: 0.5000\n",
       "Epoch 15\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 4ms/step - loss: 0.2354 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 1.6202 - accuracy: 0.5000\n",
       "Epoch 16\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.3883 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0578 - accuracy: 1.0000\n",
       "Epoch 17\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1673 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.1027 - accuracy: 1.0000\n",
       "Epoch 18\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.1028 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.1193 - accuracy: 1.0000\n",
       "Epoch 19\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1460 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0971 - accuracy: 1.0000\n",
       "Epoch 20\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0236 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 1.1271 - accuracy: 0.5000\n",
       "Epoch 21\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.0101 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 1.1877 - accuracy: 0.5000\n",
       "Epoch 22\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 1.9254 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 1.2760 - accuracy: 0.5000\n",
       "Epoch 23\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.0275 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.2594 - accuracy: 1.0000\n",
       "Epoch 24\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 3.7168 - accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.9682 - accuracy: 0.5000\n",
       "Epoch 25\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 5.8840 - accuracy: 0.0000e+00\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.2332 - accuracy: 1.0000\n",
       "Epoch 26\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 4ms/step - loss: 3.2920 - accuracy: 0.0000e+00\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.6348 - accuracy: 0.5000\n",
       "Epoch 27\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.2539 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.3113 - accuracy: 1.0000\n",
       "Epoch 28\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.0890 - accuracy: 1.0000\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.5042 - accuracy: 1.0000\n",
       "Epoch 29\n",
       "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.3857 - accuracy: 1.0000\n"
+      "2/2 [==============================] - 0s 2ms/step - loss: 0.3991 - accuracy: 1.0000\n"
      ]
     }
    ],
@@ -318,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,22 +337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2.2428896e-01],\n",
-       "       [9.9761140e-01],\n",
-       "       [8.6507928e-01],\n",
-       "       [9.9688870e-01],\n",
-       "       [9.5745611e-01],\n",
-       "       [9.5734870e-01],\n",
-       "       [5.1232914e-06]], dtype=float32)"
+       "array([[0.],\n",
+       "       [0.],\n",
+       "       [0.],\n",
+       "       [0.],\n",
+       "       [0.],\n",
+       "       [0.],\n",
+       "       [0.]], dtype=float32)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +372,7 @@
        "(28, 28, 1)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
